# PocketAi-App

./: .gitignore  LICENSE  NOTICE  README.md  app.json  build.gradle.kts  build_apk.ipynb  eas.json  gradle.properties  package-lock.json  package.json  settings.gradle.kts
.github/: FUNDING.yml
ai-engine/: build.gradle.kts
ai-module/: build.gradle.kts  proguard-rules.pro
android/: settings.gradle
android/app/: build.gradle
app/: _layout.tsx  build.gradle.kts  index.tsx  proguard-rules.pro
app/(main)/: _layout.tsx  chat.tsx  models.tsx  settings.tsx
app/(setup)/: _layout.tsx  connecting.tsx  install.tsx  start-api.tsx  termux.tsx  welcome.tsx
assets/: network_security_config.xml
data-hub-lib/: build.gradle.kts  consumer-rules.pro
data-hub-lib/src/main/cpp/: CMakeLists.txt  data_hub_lib.cpp
data-hub-lib/src/main/cpp/libs/: aes.c  aes.h  json.hpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ios/: Podfile
ios/PocketAI/: Info.plist
ios/PocketAI.xcodeproj/: project.pbxproj
libs/: libsodium-1.0.20.0.aar
modules/termux-intent/: expo-module.config.json  index.ts  package.json
plugin-api/: build.gradle.kts  consumer-rules.pro
plugins/: build.gradle.kts  consumer-rules.pro  export.gradle.kts  proguard-rules.pro  withNetworkConfig.js  withTermuxIntent.js  withTermuxPermission.js
src/components/: BatteryWarning.tsx  ChatBubble.tsx  ChatInput.tsx  CommandBlock.tsx  Header.tsx  ModelCard.tsx  ProgressBar.tsx  SetupStep.tsx  StatusIndicator.tsx  index.ts
src/constants/: commands.ts  theme.ts
src/hooks/: index.ts  (+4 more)
(+257 files in other folders)
